force-app/main/default/objects/ADM_Released_In__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <label>Release</label>
    <referenceTo>ADM_Release__c</referenceTo>
    <relationshipName>Release</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>