force-app/main/default/objects/ADM_Released_In__c/fields/Reverted__c.field-meta.xml
<CustomField>
    <fullName>Reverted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reverted</label>
    <type>Checkbox</type>
</CustomField>