force-app/main/default/objects/ADM_Released_In__c/fields/Scheduled_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Release_Date__c</fullName>
    <formula>Release__r.Release_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Release Date</label>
    <type>DateTime</type>
</CustomField>