force-app/main/default/objects/ADM_Released_In__c/fields/Stamped_On__c.field-meta.xml
<CustomField>
    <fullName>Stamped_On__c</fullName>
    <description>Date/time that the release stamp was stamped.</description>
    <label>Stamped On</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>