force-app/main/default/objects/ADM_Released_In__c/fields/Work__c.field-meta.xml
<CustomField>
    <fullName>Work__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work ID</label>
    <referenceTo>ADM_Work__c</referenceTo>
    <relationshipName>WorkReleasedIn</relationshipName>
    <type>Lookup</type>
</CustomField>