force-app/main/default/objects/ADM_Released_In__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Release_Name__c</columns>
    <columns>Work__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>